<resources>
    <string name="app_name">Consulta SUS</string>
    <string name="action_sign_in">Login</string>
    <string name="prompt_email">E-mail ou CPF</string>
    <string name="registrar"><u>Registrar-se</u></string>
    <string name="prompt_password">Senha</string>
    <string name="next">Avançar</string>
    <string name="back">Voltar</string>
    <string name="finish">Finalizar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tabbed_activty">TabbedActivty</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_agenda_consulta">Agendamento</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
