<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="beta.user.consultasus.Control.Registrar">

    <include
        layout="@layout/tab_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_register"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient_full"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:onClick="click_back"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient_full"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="click_next"
            />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient_full"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="click_finish"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
